<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tp</groupId>
  <artifactId>tp_java_avance</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>21</java.version>
   <!--  
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    --> 
    <maven.compiler.release>${java.version}</maven.compiler.release><!-- depuis java 9 -->
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
   <modules>
       <module>market_model</module>
       <module>market_core</module>
       <module>market_api</module>
       <module>market_spi</module>
       <module>market_persistence</module>
       <module>market_server</module>
       <module>trader</module>

       <module>exos_threads</module>
       <module>exos_java</module>
       <module>with_mockito</module>
   </modules>
  
  
  <build>
    <!--
    <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </pluginManagement>
    -->
</build>
  
  
</project>